# crxzipple

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_tool_definition_contract.py  0003_tool_runtime_lifecycle.py  0004_tool_run_reliability.py  0005_llm_subsystem_v2.py  0006_agent_profiles_v2.py  0007_session_subsystem_v2.py  0008_session_instance_lifecycle.py  0009_structured_session_transcript.py  0010_orchestration_runs.py  0011_orchestration_queue_policy.py  0012_dispatch_tasks.py  0013_dispatch_task_leases.py  0014_session_binding_columns_nullable.py  0015_orchestration_wait_mappings.py  0016_session_hot_path_indexes.py  0017_agent_tool_policy.py  0018_tool_required_effect_ids.py  0019_effect_metadata_cleanup.py  0020_effect_request_terminology.py  0021_agent_tool_preferences_payload.py  0022_agent_tool_preferences_cleanup.py  0023_memory_domain.py  0024_llm_context_window_tokens.py  0025_authorization_temporary_grants.py  0026_drop_agent_profiles_table.py  0027_tool_run_invocation_context.py  0028_drop_tool_definitions_table.py  0029_drop_orchestration_bulk_key.py  0030_drop_session_message_content.py  0031_drop_session_llm_id.py  0032_rename_reply_payload_columns.py  0033_create_orchestration_ingress_requests.py  0034_create_orchestration_scheduler_signals.py  0035_create_orchestration_executor_leases.py  0036_llm_profile_concurrency_limits.py  0037_orchestration_active_lane_guard.py  0038_add_orchestration_ingress_request_kinds.py  0039_create_tool_runtime_tracking.py  0040_create_operations_projections.py  (+51 more)
config/agent_profiles/: README.md
config/authorization_policies/: default.yaml
docs/: README.md  agent-workspace-bootstrap-design.md  artifact-storage-policy.md  channel-credential-requirements-guide.md  channels-events-blueprint.md  context-workspace-prompt-tree-design.md  context-workspace-prompt-tree-development.md  dispatch-design.md  inbox-channel-guide.md  instruction-assets-memory-auth-design.md  lark-channel-guide.md  local-assistant-permissions-design.md  memory-rewrite-cutover.md  memory-space-design.md  ocr-capability-runtime-policy.md  openclaw-memory-core-notes.md  operations-data-truth-audit.md  orchestration-design.md  session-semantics-design.md  skill-source-trust-policy.md  tool-credential-requirements-guide.md  web-channel-guide.md  webhook-channel-guide.md
docs/archive/: README.md  (+1 more)
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
specs/: open_meteo_weather.openapi.json
tests/: __init__.py  conftest.py
tools/: README.md  __init__.py
(+2745 files in other folders)
