[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crxzipple"
version = "0.1.0"
description = "Local Agent Runtime console with DDD module boundaries and Operations projections"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15,<1.16",
    "fastapi>=0.135,<0.136",
    "httpx>=0.28,<0.29",
    "lark-oapi>=1.5,<2.0",
    "mcp-proxy>=0.12,<0.13",
    "opencv-python-headless>=4.10,<5.0",
    "Pillow>=11.0,<12.0",
    "paddleocr>=2.7,<3.0",
    "playwright>=1.52,<1.53",
    "psycopg[binary]>=3.2,<3.3",
    "PyYAML>=6.0,<7.0",
    "redis>=5.0,<6.0",
    "requests>=2.32,<2.33",
    "sqlalchemy>=2.0,<2.1",
    "typer>=0.17,<0.18",
    "uvicorn>=0.34,<0.35",
    "watchfiles>=1.1,<2.0",
    "websocket-client>=1.8,<2.0",
]

[project.scripts]
crxzipple = "crxzipple.main:main"
crxzipple-api = "crxzipple.interfaces.http.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"crxzipple.modules.context_workspace.application.prompts" = ["*.md"]

[tool.pytest.ini_options]
markers = [
    "benchmark: benchmark or throughput checks; keep out of default fast loops unless explicitly selected",
    "fast: module-local unit tests that avoid full runtime/app assembly",
    "integration: tests that cross a process, browser, or external-service boundary",
    "live: tests gated by a live external browser/service environment variable",
    "runtime: tests that assemble the runtime container, HTTP app, CLI app, worker loop, or daemon surface",
    "slow: intentionally slow coverage that should be audited before being added to common developer loops",
]
